<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/nav_search" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_airplane"
            android:title="@string/nav_favorites" />
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_flight_takeoff"
            android:title="@string/nav_menu" />
        <item
            android:id="@+id/nav_poi"
            android:icon="@drawable/ic_star"
            android:title="@string/nav_poi" />
        <item
            android:id="@+id/nav_coupon"
            android:icon="@drawable/ic_coupon"
            android:title="@string/nav_coupon" />

        <item
            android:id="@+id/nav_survey"
            android:icon="@drawable/ic_survey"
            android:title="@string/nav_survey" />
    </group>
</menu>