<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/flight_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/toolbar"
            app:layout_constraintStart_toStartOf="@+id/toolbar"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            android:visibility="invisible"
            android:orientation="vertical">

            <include layout="@layout/fragment_flight_list_item" android:id="@+id/flight_details" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:src="@drawable/ic_shadow" />

            <Button
                android:id="@+id/order_food"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:drawableStart="@drawable/button_dining"
                android:drawableTint="@android:color/darker_gray"
                android:padding="20dp"
                android:text="@string/order_food"
                android:background="?attr/selectableItemBackground"
                android:textAllCaps="false"
                android:textAlignment="textStart"/>
            <Button
                android:id="@+id/watch_safety_instructions"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:drawableStart="@drawable/button_file"
                android:drawableTint="@android:color/darker_gray"
                android:padding="20dp"
                android:text="@string/watch_instructions"
                android:background="?attr/selectableItemBackground"
                android:textAllCaps="false"
                android:textAlignment="textStart"/>
            <Button
                android:id="@+id/call_attendant"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:drawableStart="@drawable/button_notification"
                android:drawableTint="@android:color/darker_gray"
                android:padding="20dp"
                android:text="@string/call_attendant"
                android:background="?attr/selectableItemBackground"
                android:textAllCaps="false"
                android:textAlignment="textStart"/>

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.NavigationView

        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/drawer_view" />

</android.support.v4.widget.DrawerLayout>


